--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/client/node_modules
 /.pnp
 .pnp.js
 
@@ -17,6 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+/server/config/config.js
 
 npm-debug.log*
 yarn-debug.log*
